# brother_ql_web

./: .gitignore  README.md  config.py  flake.nix  pyproject.toml
app/: utils.py
app/labeldesigner/: label.py  routes.py
app/labeldesigner/templates/: labeldesigner.html  main.js
brother_ql_web/: config.py  run.py
brother_ql_web/app/: __init__.py
brother_ql_web/app/errors/: __init__.py
brother_ql_web/app/labeldesigner/: __init__.py  printer.py  routes.py
brother_ql_web/app/labeldesigner/templates/: labeldesigner.html
